feat(presentation): add Tournament Presentation System with opening ceremonies and arena flyovers
### Added
- Tournament Presentation Engine
- Opening Ceremony framework
- Team Showcase system
- Tournament Overview presentation
- Game Introduction sequences
- Arena Flyover cinematics
- Camera waypoint and path system
- Countdown presentation flow
- Winner Ceremony support
- Tournament Finale presentation

### Integration
- Integrated with Tournament Engine
- Integrated with KMCAuto workflow
- Integrated with Voting System
- Integrated with Team System
- Integrated with Minigame Framework

### New Tournament Flow
Ready Check
→ Opening Ceremony
→ Team Showcase
→ Tournament Overview
→ Voting Phase
→ Game Showcase
→ Arena Flyover
→ Countdown
→ Game Start

### Cinematics
- Reusable camera routes
- Waypoint-based flyovers
- Smooth camera interpolation
- Title and subtitle overlays
- Sound and particle support
- Presentation synchronization for all players

### Administration
- Presentation management commands
- Preview and testing tools
- Skip and recovery controls

### Future Support
- MVP presentations
- Hall of Fame showcases
- Seasonal intros
- Sponsor and event segments
- Story-driven tournament experiences